# Content-Generation-Tool

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  netlify.toml
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  22cadb8399fd_initial_schema.py
backend/app/: __init__.py  config.py  db.py  deps.py  logging.py  main.py  security.py  sentry.py
backend/app/config_files/: ai_tells.yaml  model_rates.yaml
backend/app/models/: __init__.py  base.py  client.py  generation.py  sitemap.py  user.py
backend/app/prompts/: content_blog.md  content_pdp.md  content_plp.md  content_service_page.md  outline_blog.md  outline_pdp.md  outline_plp.md  outline_service_page.md  qa_review.md
backend/app/routers/: __init__.py  auth.py  clients.py  export.py  generations.py  sitemaps.py  usage.py
backend/app/schemas/: auth.py  client.py  generation.py  usage.py
backend/app/services/: __init__.py  auth_service.py  claude_service.py  cost_service.py  export_service.py  fetcher.py  prompts.py  qa_service.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_auth.py  test_clients.py  test_concurrency_lock.py  test_content_stream.py  test_export.py  test_generations.py  test_qa.py  test_sitemaps.py  test_usage.py
backend/tests/unit/: test_claude_service.py  test_config.py  test_export_service.py  test_fetcher.py  test_health.py  test_prompts.py  test_qa_service.py  test_security.py
docs/: architecture-design.md  build-plan.md  (+2 more)
(+71 files in other folders)
